Unreviewed, non-unified build fix after 247623@main https://bugs.webkit.org/show_bug.cgi?id=237074

* bindings/js/WebAssemblyCachedScriptSourceProvider.h: Namespace.



Canonical link: https://commits.webkit.org/247671@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@290353 268f45cc-cd09-0410-ab3c-d52691b4dbfc